@@ -1,3 +1,5 @@
+- localedrake:
+  o adapt to cooker: scim-tables-skim is now skim-scim-tables
 - bootloader:
   o when reading existing menu.lst, keep verbatim entries for which the device
   has no mount-point
